Version adapter and error handling.