@@ -1,6 +1,9 @@
 package blue.sparse.robots;
 
-import blue.sparse.robots.commands.RobotsCommand;
+import blue.sparse.robots.util.ErrorHandler;
+import blue.sparse.robots.version.VersionAdapter;
+import org.bukkit.Bukkit;
+import blue.sparse.robots.command.RobotsCommand;
 import blue.sparse.robots.listener.PlayerInteractListener;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.configuration.file.YamlConfiguration;
@@ -11,12 +14,54 @@ import java.io.File;
 
 public final class RobotsPlugin extends JavaPlugin {
 
+	private static VersionAdapter versionAdapter;
+	private static ErrorHandler errorHandler;
 	private static RobotsPlugin instance;
+
+	private static String getVersion() {
+		return Bukkit
+				.getServer()
+				.getClass()
+				.getPackage()
+				.getName()
+				.split("\\.")[3];
+
+	}
+
+	public static RobotsPlugin getInstance() {
+		return instance;
+	}
+
+	public static void error(Throwable error) {
+		errorHandler.logError(error);
+	}
+
 	private YamlConfiguration messagesConfig;
 
 	@Override
 	public void onEnable() {
 		instance = this;
+		errorHandler = new ErrorHandler(new File(getDataFolder(), "errors"), getLogger());
+
+		final String version = getVersion();
+		try {
+			versionAdapter = (VersionAdapter) Class
+					.forName(String.format(
+							"blue.sparse.robots.version.%s.VersionImpl",
+							version
+					))
+					.getDeclaredConstructor()
+					.newInstance();
+			getLogger().info("Plugin enabled with version adapter " + version);
+		} catch (ReflectiveOperationException e) {
+			errorHandler.logError(e);
+			getLogger().severe(String.format(
+					"Plugin does not support this version (%s), disabling.",
+					version
+			));
+			getServer().getPluginManager().disablePlugin(this);
+		}
+
 		messagesConfig = loadConfiguration("messages.yml");
 
 		registerCommand(RobotsCommand.class);
@@ -39,24 +84,21 @@ public final class RobotsPlugin extends JavaPlugin {
 
 	private void registerListener(Class<? extends Listener> listenerClass) {
 		try {
-			Listener listener = listenerClass.newInstance();
+			Listener listener = listenerClass.getDeclaredConstructor().newInstance();
 			getServer().getPluginManager().registerEvents(listener, this);
-		} catch (InstantiationException | IllegalAccessException e) {
-			e.printStackTrace();
+		} catch (ReflectiveOperationException e) {
+			error(e);
 		}
 	}
 
 	private void registerCommand(Class<? extends CommandExecutor> commandClass) {
 		String command = commandClass.getSimpleName().replace("Command", "");
 		try {
-			CommandExecutor instance = commandClass.newInstance();
+			CommandExecutor instance = commandClass.getDeclaredConstructor().newInstance();
 			getCommand(command).setExecutor(instance);
-		} catch (InstantiationException | IllegalAccessException e) {
-			e.printStackTrace();
+		} catch (ReflectiveOperationException e) {
+			error(e);
 		}
 	}
 
-	public static RobotsPlugin getInstance() {
-		return instance;
-	}
 }
